; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_wifi.c_wifi_setmac.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_wifi.c_wifi_setmac.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@INVALID_MAC_STR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @wifi_setmac to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wifi_setmac(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca [6 x i32], align 16
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %6, align 4
  %8 = load i32*, i32** %3, align 8
  %9 = call i8* @luaL_checklstring(i32* %8, i32 1, i32* %6)
  store i8* %9, i8** %7, align 8
  %10 = load i32*, i32** %3, align 8
  %11 = load i32, i32* %6, align 4
  %12 = icmp eq i32 %11, 17
  %13 = zext i1 %12 to i32
  %14 = load i32, i32* @INVALID_MAC_STR, align 4
  %15 = call i32 @luaL_argcheck(i32* %10, i32 %13, i32 1, i32 %14)
  %16 = getelementptr inbounds [6 x i32], [6 x i32]* %5, i64 0, i64 0
  %17 = load i8*, i8** %7, align 8
  %18 = call i32 @ets_str2macaddr(i32* %16, i8* %17)
  %19 = load i32*, i32** %3, align 8
  %20 = load i32, i32* %4, align 4
  %21 = getelementptr inbounds [6 x i32], [6 x i32]* %5, i64 0, i64 0
  %22 = call i32 @wifi_set_macaddr(i32 %20, i32* %21)
  %23 = call i32 @lua_pushboolean(i32* %19, i32 %22)
  ret i32 1
}

declare dso_local i8* @luaL_checklstring(i32*, i32, i32*) #1

declare dso_local i32 @luaL_argcheck(i32*, i32, i32, i32) #1

declare dso_local i32 @ets_str2macaddr(i32*, i8*) #1

declare dso_local i32 @lua_pushboolean(i32*, i32) #1

declare dso_local i32 @wifi_set_macaddr(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
